# llama-skills

./: AGENTS.md  INSTALL.md  README.md  llama-skills.md  pyproject.toml
deploy/: llama-skills.service
src/skills_proxy/: __init__.py  config.py  main.py  mcp_server.py  models.py  proxy.py  registry.py  skill_store.py  tools_handler.py  version.py
tests/: conftest.py  test_mcp.py  test_proxy.py  test_registry.py  test_resolve_url.py  test_skill_store.py  test_tools.py
tests/fixtures/skills/demo-skill/: SKILL.md
tests/fixtures/skills/demo-skill/references/: REFERENCE.md
tests/fixtures/skills/disabled-skill/: SKILL.md
tests/fixtures/skills/incomplete-skill/: SKILL.md
