[project]
name = "llama-skills"
version = "0.2.2"
description = "Agent Skills middleware for llama-server: registry injection and MCP activation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.1",
    "pyyaml>=6.0.3",
    "uvicorn>=0.47.0",
]

[project.scripts]
llama-skills = "skills_proxy.main:run"

[build-system]
requires = ["uv_build>=0.9.6,<0.11"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "skills_proxy"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
